--- a/yew-app/Cargo.toml
+++ b/yew-app/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2021"
 
 [dependencies]
 yew = "0.19.3"
-stylist = {version = "0.10", features = ["yew"]}
+yew-router = "0.16.0"
+stylist = {version = "0.10.1", features = ["yew"]}
 wasm-bindgen = "0.2.83"
 
 [dependencies.web-sys]
