--- a/yew-app/Cargo.toml
+++ b/yew-app/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 yew = "0.19.3"
 yew-router = "0.16.0"
+yewdux = "0.8.2"
+yewdux-functional = "0.1.0"
 stylist = {version = "0.10.1", features = ["yew"]}
 wasm-bindgen = "0.2.83"
 
@@ -20,4 +22,4 @@ features = [
 ]
 
 [dev-dependencies]
-gloo = "0.8.0"
+gloo-console = "0.2.3"
