update mild-style build ci

--- a/mild-ui/.vscode/settings.json
+++ b/mild-ui/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-  "cSpell.words": ["necolas", "stylelint"],
+  "cSpell.words": ["Minifier", "necolas", "stylelint"],
   "stylelint.configFile": "./mild-styles/.stylelintrc"
 }
