--- a/mild-ui/crates/docs/Cargo.toml
+++ b/mild-ui/crates/docs/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "docs"
+name = "mild-docs"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-mild-ui = {path = "../core"}
+mild-core = {path = "../core"}
 yew = "0.19.3"
