--- a/mild-ui/mild-style/package.json
+++ b/mild-ui/mild-style/package.json
@@ -23,14 +23,12 @@
     "stylelint": "^14.13.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^28.0.0",
+    "stylelint-config-sass-guidelines": "^9.0.1",
     "stylelint-order": "^5.0.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
   "dependencies": {
-    "-": "^0.0.1",
-    "D": "^1.0.0",
-    "normalize.css": "^8.0.1",
-    "stylelint-config-sass-guidelines": "^9.0.1"
+    "normalize.css": "^8.0.1"
   }
 }
