--- a/mild-ui/mild-style/package.json
+++ b/mild-ui/mild-style/package.json
@@ -2,6 +2,9 @@
   "name": "mild-style",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "16.18.0"
+  },
   "scripts": {
     "build": "webpack --env production",
     "dev": "webpack --watch",
