--- a/mild-ui/mild-style/.stylelintrc
+++ b/mild-ui/mild-style/.stylelintrc
@@ -26,7 +26,8 @@
           "include",
           "mixin",
           "return",
-          "warn"
+          "warn",
+          "@each"
         ]
       }
     ],
