--- a/mild-ui/crates/core/Cargo.toml
+++ b/mild-ui/crates/core/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-yew = "0.19.3"
-gloo-console = "0.2.3"
+gloo-timers = "^0.2.4"
+web-sys = "^0.3.60"
+yew = "^0.19.3"
