--- a/mild-ui/crates/mild-docs/Trunk.toml
+++ b/mild-ui/crates/mild-docs/Trunk.toml
@@ -2,7 +2,7 @@
 # Paths to watch. The `build.target`'s parent folder is watched by default.
 watch = [
     # mild-core
-    "../core/src",
+    "../mild-core/src",
     # mild-style
     "../../mild-style/dist/style.css",
     # mild-docs
