--- a/mild-ui/crates/mild-core/Cargo.toml
+++ b/mild-ui/crates/mild-core/Cargo.toml
@@ -7,5 +7,10 @@ edition = "2021"
 
 [dependencies]
 gloo-timers = "^0.2.4"
-web-sys = "^0.3.60"
+wasm-bindgen = "0.2.83"
 yew = "^0.20.0"
+
+
+[dependencies.web-sys]
+version =  "^0.3.60"
+features = ["DomRect", "Element"]
