Transfer ripple wrapper to use_ripple

--- a/mild-ui/.vscode/settings.json
+++ b/mild-ui/.vscode/settings.json
@@ -3,9 +3,11 @@
     "bindgen",
     "gloo",
     "hotwatch",
+    "keydown",
     "Minifier",
     "necolas",
     "onclick",
+    "onkeydown",
     "onmousedown",
     "onmouseleave",
     "onmouseup",
