Add focus and blur event for button

--- a/mild-ui/.vscode/settings.json
+++ b/mild-ui/.vscode/settings.json
@@ -6,7 +6,9 @@
     "keydown",
     "Minifier",
     "necolas",
+    "onblur",
     "onclick",
+    "onfocus",
     "onkeydown",
     "onmousedown",
     "onmouseleave",
